--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@
 }
 
 
-
 /* fixed sidebar boxes */
 @media (min-width:1500px) {
     .upper-fixed-box {
@@ -163,6 +162,13 @@
     }
 }
 
+
+#list-settings {
+    line-height: 10px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: left;
+    font-size: large;
+}
 
 
 /* link settings */
