--- a/styles.css
+++ b/styles.css
@@ -234,14 +234,17 @@ color: rgb(130, 10, 10);
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     margin: 0px;
-    padding: 50px;
-    gap: 25px;
+    padding: 70px;
+    gap: 20px;
     background-color: rgb(220, 237, 255);
 }
 
-@media (max-width:1575px) {
+@media (max-width:1549px) {
     .grid-container3 {
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        padding-left: 20px;
+        padding-right: 20px;
+        gap: 15px;
     }
 }
 
@@ -413,14 +416,17 @@ color: rgb(255, 40, 40);
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     margin: 0px;
-    padding: 60px;
-    gap: 25px;
+    padding: 70px;
+    gap: 20px;
     background-color: rgb(255, 247, 188);
 }
 
-@media (max-width:1575px) {
+@media (max-width:1549px) {
     .grid-container4 {
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        padding-left: 20px;
+        padding-right: 20px;
+        gap: 15px;
     }
 }
 
